--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -2,15 +2,66 @@
 
 body {
     color: white;
-    background-image: url("assets/home/background-home-mobile.jpg");
-    background-repeat: no-repeat;
-    margin: 0;
+    margin: auto;
     padding: 0;
+    font-family: Barlow;
+    
 }
 
 main {
     display: grid;
-    margin: auto;
-    min-height: 100vh;
+    justify-content: center;
+    background-color: black;
+    background-image: url("assets/home/background-home-mobile.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
     
+    min-height: 100vh;
+    min-width: 375px;
+}
+
+.logo {
+    padding: 2rem;
+}
+
+.nav-burger {
+    display: grid;
+    position: absolute;
+    padding: 2rem;
+    justify-self: end;
+}
+
+
+.navlist {
+    display: none;
+    position: absolute;
+    padding: 2rem;
+    justify-self: end;
+    
+}
+
+.sotext {
+    justify-self: center;
+}
+.space {
+    justify-self: center;
+    font-size: 2rem;
+}
+p{
+    padding: 2rem;
+    justify-self: center;
+    text-align: center;
+}
+
+@media (min-width: 1000px) {
+    main {
+        background-color: black;
+        background-image: url("assets/home/background-home-desktop.jpg");
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+
+    .nav-burger {
+        display: none;
+    }
 }
