--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ main {
     background-position: center;
     background-size: 100%;
     min-height: 100vh;
-    min-width: 100vw;
+    
 }
 
 .header {
@@ -53,8 +53,10 @@ main {
 }
 
 h1 {
-    padding: 1rem;
+    
     font-size: 1.5rem;
+    letter-spacing: 2px;
+    font-weight: 300;
     letter-spacing: 2px;
 }
 
@@ -65,20 +67,29 @@ h2 {
     letter-spacing: 4px;
 }
 
-.spacepara {
+.home {
     display: grid;
-    text-align: center;
+    align-content: center;
+    justify-content: center;
     padding: 1rem;
+    
+}
+.spacepara {
+    text-align: center;
+    padding: 2rem;
+    
 }
 
 p{
-    padding: 1rem;
-    letter-spacing: 2px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: .85rem;
+
+    line-height: 1.5rem;
+    font-weight: 200;
 }
 
 h3 {
     display: grid;
-    margin: 2rem ;
     justify-self: center;
     place-content: center;
     font-family: var(--fs-cormo-garamon);
@@ -97,14 +108,33 @@ h3 {
         background-repeat: no-repeat;
         background-position: center;
     }
+    .home {
+        display: grid;
+        text-align: center;
+        grid-template-columns: 50% 50%;
+    }
 
+    .spacepara {
+        text-align: justify;
+        width: 40vw;
+
+    }
+    
+    h1 {
+        letter-spacing: 4px;
+    }
+    h2 {
+        font-size: 7rem;
+    }
+    
     .nav-burger {
         display: none;
     }
-
+    
     .navlist {
         display: flex;
-        background-color: blue;
         
+        background-color: hsla(244, 78%, 40%, 50%);
+        padding: 2rem;
     }
 }
