--- a/style.css
+++ b/style.css
@@ -22,23 +22,20 @@ main {
     background-repeat: no-repeat;
     background-position: center;
     background-size: 100%;
-    min-height: 100vh;
+    min-height: 100dvh;
     
 }
 
 .header {
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
     .logo {
         padding: 1rem;
         justify-self: baseline;
     }
-    hr {
-        opacity: 30%;
-        width: 100%;
-        border: solid 1px hsla(50, 50, 50, 10%);
-    }
+    
     .nav-burger {
         display: grid;
         justify-self: end;
@@ -83,7 +80,6 @@ h2 {
 p{
     font-family: Arial, Helvetica, sans-serif;
     font-size: .85rem;
-
     line-height: 1.5rem;
     font-weight: 200;
 }
@@ -103,11 +99,47 @@ h3 {
 @media (min-width: 1000px) {
 
     main {
+        
         background-color: black;
         background-image: url("assets/home/background-home-desktop.jpg");
         background-repeat: no-repeat;
         background-position: center;
     }
+
+    .header {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: 2fr;
+    }
+    .logo {
+        grid-column: 1/2;
+    }
+
+    hr {
+        position: absolute;
+        opacity: 30%;
+        border: solid 1px hsla(50, 50, 50, 10%);
+        grid-column: 2/3;
+        margin-left: 12rem;
+        width: 50vw;
+    }
+
+    .nav-burger {
+        display: none;
+    }
+    
+    .navlist {
+        display: flex;
+        grid-column: 3/5;
+        justify-content: space-between;
+        opacity: 50%;
+        background-color: hsla(244, 78%, 40%, 50%);
+        margin: auto;
+        padding: 2rem 4rem 2rem 2rem;
+        width: 30vw;
+        backdrop-filter: blur(15px);        
+    }
+
     .home {
         display: grid;
         text-align: center;
@@ -115,9 +147,10 @@ h3 {
     }
 
     .spacepara {
+        display: grid;
+        justify-self: center;
         text-align: justify;
         width: 40vw;
-
     }
     
     h1 {
@@ -127,14 +160,12 @@ h3 {
         font-size: 7rem;
     }
     
-    .nav-burger {
-        display: none;
-    }
     
-    .navlist {
-        display: flex;
-        
-        background-color: hsla(244, 78%, 40%, 50%);
-        padding: 2rem;
+    h3 {
+        display: grid;
+        align-self: center;
+        font-size: 1.5rem;
+        height: 200px;
+        width: 200px;
     }
 }
