--- a/style.css
+++ b/style.css
@@ -45,7 +45,6 @@ main {
     .navlist {
         display: none;
         position: absolute;
-        margin: 2rem 2rem 0rem 0rem;
         justify-self: end;    
 }
 
@@ -68,13 +67,12 @@ h2 {
     display: grid;
     align-content: center;
     justify-content: center;
-    padding: 1rem;
+    
     
 }
 .spacepara {
     text-align: center;
     padding: 2rem;
-    
 }
 
 p{
@@ -97,9 +95,8 @@ h3 {
     border-radius: 50%;
 }
 @media (min-width: 1000px) {
-
+    
     main {
-        
         background-color: black;
         background-image: url("assets/home/background-home-desktop.jpg");
         background-repeat: no-repeat;
@@ -109,19 +106,20 @@ h3 {
     .header {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: 2fr;
+        align-items: center;
     }
     .logo {
+        margin-left: 2rem;
         grid-column: 1/2;
     }
 
     hr {
-        position: absolute;
         opacity: 30%;
         border: solid 1px hsla(50, 50, 50, 10%);
         grid-column: 2/3;
-        margin-left: 12rem;
-        width: 50vw;
+        margin-left: -12rem ;
+        margin-right: -2rem;
+        z-index: 1;
     }
 
     .nav-burger {
@@ -131,15 +129,29 @@ h3 {
     .navlist {
         display: flex;
         grid-column: 3/5;
+        background-color: hsla(244, 75%, 40%, 0.1);
+        padding: 2rem 10rem 0rem 6rem;
         justify-content: space-between;
-        opacity: 50%;
-        background-color: hsla(244, 78%, 40%, 50%);
-        margin: auto;
-        padding: 2rem 4rem 2rem 2rem;
-        width: 30vw;
-        backdrop-filter: blur(15px);        
+        width: 35vw;   
+        backdrop-filter: blur(5px);
     }
-
+    .navitems {
+        display: flex;
+        padding-bottom: 2rem;
+        text-align: justify;
+        place-content: center;
+        border-bottom: solid 1px hsla(244, 75%, 40%, 0);
+        letter-spacing: 2px;
+    }
+    .navitems span {
+        padding: 0.2rem;
+        font-weight: 200;
+    }
+    .navitems:hover {
+        border-bottom: solid 1px white;
+        cursor: pointer;
+        
+    }
     .home {
         display: grid;
         text-align: center;
@@ -150,7 +162,8 @@ h3 {
         display: grid;
         justify-self: center;
         text-align: justify;
-        width: 40vw;
+        padding: 5rem 15rem;
+        
     }
     
     h1 {
@@ -158,6 +171,8 @@ h3 {
     }
     h2 {
         font-size: 7rem;
+        padding: 1rem 0 2rem 0;
+        
     }
     
     
@@ -167,5 +182,18 @@ h3 {
         font-size: 1.5rem;
         height: 200px;
         width: 200px;
+    }
+    p {
+        line-height: 1.75rem;
+    }
+    .explore {
+        padding: 2rem;
+    }
+}
+
+@media (min-width: 1900px) {
+    * {
+        font-size: 20px;
+        
     }
 }
